sửa giao diện hợp đồng mẫu

--- a/src/app/main/contract-folder/contract-folder.component.scss
+++ b/src/app/main/contract-folder/contract-folder.component.scss
@@ -254,8 +254,8 @@
 
 ::ng-deep .multiselect-dropdown {
   .selected-item {
-    max-width: 95% !important;
-    min-height: 38px;
+    // max-width: 95% !important;
+    // min-height: 38px;
     height: auto;
   }
 }
