Vnpt SmartCA: them option nha cung cap web mobile + xu ly redirect khi ky don

--- a/src/app/main/contract-signature/components/consider-contract/remote-dialog-sign/remote-dialog-sign.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/remote-dialog-sign/remote-dialog-sign.component.scss
@@ -102,4 +102,9 @@ input.pw {
   select:invalid {
     color: gray;
   }
+  .form-select-custom {
+    width: 100%;
+    height: 33px;
+    border-radius: 5px;
+  }
 }
