--- a/src/app/main/contract-signature/components/consider-contract/remote-dialog-sign/remote-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/remote-dialog-sign/remote-dialog-sign.component.html
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="sign-unit-select">
         <div class="label text-color">Nhà cung cấp <span class="required-title">*</span></div>
-        <select formControlName="supplier" class="form-select" style="font-size: 14px" aria-label="Default select example">
+        <select formControlName="supplier" class="form-select-custom" style="font-size: 14px" aria-label="Default select example">
           <option value="1">VNPT SmartCA</option>
           <option value="2" >CA2 Nacencomm</option>
         </select>
@@ -36,6 +36,15 @@
     <h3 class="label-header">{{this.datas.title | translate}}</h3>
   </div>
   <form [formGroup]="myForm" class="content">
+    <div class="row">
+      <div class="sign-unit-select">
+        <div class="label text-color">Nhà cung cấp <span class="required-title">*</span></div>
+        <select formControlName="supplier" class="form-select-custom" style="font-size: 14px" aria-label="Default select example">
+          <option value="1">VNPT SmartCA</option>
+          <option value="2" >CA2 Nacencomm</option>
+        </select>
+      </div>
+    </div>
       <div class="row">
           <div class="col-md-12">
               <div class="label text-color">{{'tax_code.cardId' | translate}} <span class="required-title">*</span></div>
