--- a/src/app/main/contract/detail-contract/detail-contract.component.scss
+++ b/src/app/main/contract/detail-contract/detail-contract.component.scss
@@ -289,7 +289,8 @@
   height: 85px!important;
 }
 .action-button {
-  width: 100px;
+  width: auto;
+  min-width: 100px;
   background: #0041C4;
   //font-weight: bold;
   color: white;
@@ -301,7 +302,8 @@
 }
 
 .action-button1 {
-  width: 180px;
+  width: auto;
+  min-width: 180px;
   height: 30px;
   background: #106DB6;
   //font-weight: bold;
